@@ -1,0 +1,7 @@
+function ndiv(n as uinteger) as uinteger
+  return n / 10
+end function
+
+function nmod(n as uinteger) as uinteger
+  return n mod 10
+end function
